2000-05-03  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 11091: Functions/Zftp/zfcd_match: fix for completion of
 	directories for zftp suite
	
	* 11086: Src/builtin.c: allow calling `print -s' in widgets, avoid
 	duplicated history number
	
2000-05-02  Bart Schaefer  <schaefer@brasslantern.com>

	* 11077: Relocate misplaced redirection from 11043.

	* 11036, 11063: Always write the `read -q' prompt to shout;
	elminate some redundant close() calls.

2000-05-02  Oliver Kiddle  <opk@zsh.org>

	* 11078: README: update download location for yodl

2000-05-02  Tanaka Akira  <akr@m17n.org>

	* 11075: install completion functions for AIX and BSD.

2000-05-02  Andrew Main  <zefram@zsh.org>

	* zefram103: Src/Makemod.in.in: make sure .{e,}pro files are
	non-empty, to keep the AIX compiler quiet.

2000-05-02  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11066: Src/exec.c: suppress doing in and/or when at the end
	of a sequence of &&/|| when another sublist follows.

2000-05-02  Oliver Kiddle  <opk@zsh.org>

	* 11065: Completion/Commands/_complete_debug: small fix to avoid
	using slashes in temporary file name

2000-05-02  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 11061: Functions/Misc/zrecompile: make zrecompile detect deleted
 	and new files
	
	* 11060: Doc/Zsh/compsys.yo: two more doc fixes
	
2000-05-02  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11057: Src/builtin.c:  getopts for options with arguments
	miscounted $OPTIND and index into subsequent options (see 9095).

2000-05-02  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 11058: Completion/Core/_message, Doc/Zsh/compwid.yo, Src/Zle/comp.h,
 	Src/Zle/compcore.c, Src/Zle/complete.c: add -x option to compadd
 	to display message unconditionally
	
	* 11053: Completion/Commands/_complete_help: always use empty
 	matcher-list style in _complete_help
	
	* 11052: Src/Zle/computil.c: fix for _arguments, use
 	on-line-argument-numbers only for normal arguments, not for