@@ -1,5 +1,9 @@
 2000-05-03  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>
 
+	* 11092: Completion/Base/_arguments, Src/Zle/compcore.c: make sure
+ 	that completion messages are displayed even when there are no
+ 	matches
+	
 	* 11091: Functions/Zftp/zfcd_match: fix for completion of
  	directories for zftp suite
 	
